--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 layout: default
 ---
 
+  <head>
+    <meta charset="UTF-8">
+    <title>ViSG 课程</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+	<link href='stylesheets/googleapi_font.css' rel='stylesheet' type='text/css'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'> -->
+	<!-- google打不开让网页变慢 -->
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+  </head>
+
+
 <body>
     <section class="page-header">
       <h1 class="project-name">ViSG 课程</h1>
