--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
 <body>
     <section class="page-header">
-        ![sample post]({{site.baseurl}}/images/image-1.png)
+        <img src="./image-4.png">
         <h1 class="project-name">Anyi Rao</h1>
         <h2 class="project-tagline">Visual Sensing and Graphics Lab</h2>
     </section>
