--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
 <body>
     <section class="page-header">
-        <img src="./italy.jpg">
+        <img src="italy.jpg">
         <h1 class="project-name">Anyi Rao</h1>
         <h2 class="project-tagline">Visual Sensing and Graphics Lab</h2>
     </section>
