--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
     <section class="page-header">
         <img src="italy.jpg">
         <h1 class="project-name">Anyi Rao</h1>
-        <h2 class="project-tagline">Visual Sensing and Graphics Lab</h2>
+        <h2 class="project-tagline">I am from [**Nanjing University School of Electronic Science and Engineering**](http://ese.nju.edu.cn/) Visual Sensing and Graphics Lab</h2>
     </section>
 
     <section class="main-content">
