--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ layout: default
     <section class="page-header">
         <img src="italy.jpg">
         <h1 class="project-name">Anyi Rao</h1>
-        <h2 class="project-tagline">I am from [**Nanjing University School of Electronic Science and Engineering**](http://ese.nju.edu.cn/) Visual Sensing and Graphics Lab</h2>
+        <h2 class="project-tagline">I am from <a href="http://ese.nju.edu.cn/">Nanjing University School of Electronic Science and Engineering</a> </h2>
+        <h3 Visual Sensing and Graphics Lab </h3>
     </section>
 
     <section class="main-content">
