--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@ layout: default
     <section class="page-header">
         <img src="italy.jpg">
         <h1 class="project-name">Anyi Rao</h1>
-        <h2 class="project-tagline">I am from <a href="http://ese.nju.edu.cn/">Nanjing University School of Electronic Science and Engineering</a> </h2>
-        <p> Visual Sensing and Graphics Lab </p>
+        <p> class="project-tagline">I am from <a href="http://ese.nju.edu.cn/">Nanjing University School of Electronic Science and Engineering</a> </p>
+        <p> I am a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, from <a href="http://www.moe.gov.cn/">Ministry of Education of China</a>.</p>
     </section>
 
     <section class="main-content">
         <h2>Research Interests</h2>
-      <p>Computer vision</p>
+      <p>Computer vision, Machine Learning</p>
       
     </section>  
 </body>
