--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 ---
 layout: default
 ---
@@ -12,9 +13,10 @@ layout: default
 
     <section class="main-content">
         <h2>Research Interests</h2>
-      <p>Computer vision, Machine Learning</p>
-      
-    </section>  
+      <p>Computer Vision, Machine Learning</p>       
+    </section>
+   
+    <a href="https://clustrmaps.com/site/17y1p" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=B-icxxRpKwMYUgT-fpPXxJhSIzQ-pGeMKXY2c7hqg_o&cl=ffffff" /></a>
 </body>
 
 
