--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ layout: default
         <h2>Research Interests</h2>
       <p>Computer Vision, Machine Learning</p>       
     </section>
-   
+
+    <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=B-icxxRpKwMYUgT-fpPXxJhSIzQ-pGeMKXY2c7hqg_o&cl=ffffff&w=a"></script>
 </body>
 
 <div class="home">
