--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <body>
     <section class="page-header">
-        <img src="italy.jpg">
+        <img src="img://italy.jpg">
         <h1 class="project-name">Anyi Rao</h1>
         <p> I am from <a href="http://ese.nju.edu.cn/">Nanjing University School of Electronic Science and Engineering</a> </p>
         <p> I am a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, from <a href="http://www.moe.gov.cn/">Ministry of Education of China</a>.</p>
