--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@ layout: default
 
 </div>
     
-    <a href="https://clustrmaps.com/site/17y1p" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=B-icxxRpKwMYUgT-fpPXxJhSIzQ-pGeMKXY2c7hqg_o&cl=ffffff"></a>
-
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=cbe090&w=a&d=wqSPPLOdbjS8swCrhsthoXUrpBZpYFIUoU6NVvkcCEE&t=tt&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
 </body>
 
 
