--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
 
 </div>
     
-<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=cbe090&w=a&d=wqSPPLOdbjS8swCrhsthoXUrpBZpYFIUoU6NVvkcCEE&t=tt&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
+<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=wqSPPLOdbjS8swCrhsthoXUrpBZpYFIUoU6NVvkcCEE"></script>
 </body>
 
 
