--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ layout: default
 
 </div>
     
-<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=wqSPPLOdbjS8swCrhsthoXUrpBZpYFIUoU6NVvkcCEE"></script>
+<a href='https://clustrmaps.com/site/17y2j' title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=cbe090&w=300&d=wqSPPLOdbjS8swCrhsthoXUrpBZpYFIUoU6NVvkcCEE&t=tt&co=2d78ad&ct=ffffff'/></a>
+
 </body>
 
 
