--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
     <section class="page-header">
         <img src="img/italy.jpg">
         <h1 class="project-name">Anyi Rao</h1>
-        <p> I am a student from <a href="http://ese.nju.edu.cn/">Nanjing University School of Electronic Science and Engineering</a> </p>
+        <p> I am a third year student from <a href="http://ese.nju.edu.cn/">Nanjing University School of Electronic Science and Engineering</a>. </p>
         <p> I am a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, from <a href="http://www.moe.gov.cn/">Ministry of Education of China</a>.</p>
     </section>
 
@@ -18,7 +18,6 @@ layout: default
 
 
 <div class="home">
-
 
 </div>
     
