--- a/index.html
+++ b/index.html
@@ -20,6 +20,18 @@ layout: default
 <div class="home">
 
 </div>
+
+   <div class="text">
+            <h3>Short Bio</h3>
+            <p> Ph.D. student at Massachusetts Institute of Technology, advised by
+            <a href="http://billf.mit.edu">Professor Bill Freeman</a> and
+            <a href="http://web.mit.edu/cocosci/josh.html">Professor Josh Tenenbaum</a>.
+            His research interests lie on the intersection of computer vision, machine learning, and
+            computational cognitive science. Before coming to MIT, he received his B.Eng. from
+            Tsinghua University, China, advised by
+            <a href="http://pages.ucsd.edu/~ztu/">Professor Zhuowen Tu</a>.
+            He has also spent time working at research labs of Microsoft, Facebook, and Baidu.</p>
+    </div>
     
 <a href='https://clustrmaps.com/site/17y2j' title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=cbe090&w=300&d=wqSPPLOdbjS8swCrhsthoXUrpBZpYFIUoU6NVvkcCEE&t=tt&co=2d78ad&ct=ffffff'/></a>
 
