--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@ layout: default
 <div class="home">
 
 </div>
-
-   <div class="text">
+    
+   <div class="content anchor" id="bio">     
+      <div class="text">
             <h3>Short Bio</h3>
             <p> Ph.D. student at Massachusetts Institute of Technology, advised by
             <a href="http://billf.mit.edu">Professor Bill Freeman</a> and
@@ -31,8 +32,8 @@ layout: default
             Tsinghua University, China, advised by
             <a href="http://pages.ucsd.edu/~ztu/">Professor Zhuowen Tu</a>.
             He has also spent time working at research labs of Microsoft, Facebook, and Baidu.</p>
-    </div>
-    
+       </div>
+   </div>
 <a href='https://clustrmaps.com/site/17y2j' title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=cbe090&w=300&d=wqSPPLOdbjS8swCrhsthoXUrpBZpYFIUoU6NVvkcCEE&t=tt&co=2d78ad&ct=ffffff'/></a>
 
 </body>
