--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 layout: default
 ---
 
+<header>  
+    <div class="container header">  
+        <div class="ftheader text"><a href="index.html">Anyi</a></div>   
+        <div class="ftsubheader text"><a href="#bio">Bio</a></div>   
+    </div>
+</header>
+
+
 <body>
     <section class="page-header">
         <img src="img/italy.jpg">
