--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <header>  
+    <script src="js/header.js?prefix="></script>
     <div class="container header">  
         <div class="ftheader text"><a href="index.html">Anyi</a></div>   
         <div class="ftsubheader text"><a href="#bio">Bio</a></div>   
