--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 <div class="home">
-
 </div>
     
 <header>  
@@ -27,7 +26,23 @@ layout: default
       <p>Computer Vision, Machine Learning</p>       
     </section>
 
-
+    <div class="content heading anchor" id="home">
+          <div class="img"><img class="img_responsive" src="img/italy.jpg" alt="Photo"></div>
+          <div class="text">
+            <h2>Anyi</h2>
+            <p>Ph.D. Student, EECS, MIT</p>
+            <table>
+              <tbody><tr><td>Office:</td><td>32-D466, 32 Vassar Street</td></tr>
+              <tr><td></td><td>Cambridge, MA 02139</td></tr>
+              <tr><td>Email:</td><td>jiajunwu [at] mit (dot) edu</td></tr>
+            </tbody></table>
+            <p>
+            <span class="tag"><a href="https://scholar.google.com/citations?user=2efgcS0AAAAJ&amp;hl=en&amp;oi=ao">Google Scholar</a></span>
+            <span class="tag"><a href="http://dblp.dagstuhl.de/pers/hd/w/Wu_0001:Jiajun">DBLP</a></span>
+            </p>
+          </div>
+      </div>
+    
    <div class="content anchor" id="bio">     
       <div class="text">
             <h3>Short Bio</h3>
