--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
     <script src="js/header.js?prefix="></script>
     <div class="container header">  
         <div class="ftheader text"><a href="index.html">Anyi</a></div>   
-        <div class="ftsubheader text"><a href="#bio">Bio</a></div>   
+        <span class="ftsubheader text"><a href="#bio">Bio</a></span>   
     </div>
 </header>
 
