--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ layout: default
 <header>  
     <script src="js/header.js?prefix="></script>
     <div class="container header">  
-        <div class="ftheader text"><a href="index.html">Anyi</a></div>   
-        <span class="ftsubheader text"><a href="#bio">Bio</a></span>   
+        <div class="ftheader text"><a href="index.html">Anyi</a>  
+        <span class="ftsubheader text"><a href="#bio">Bio</a></span></div> 
     </div>
 </header>
 
