--- a/index.html
+++ b/index.html
@@ -14,22 +14,17 @@ layout: default
 
 <body>
     <div class="content heading anchor" id="home">
-          <div class="img"><img class="img_responsive" src="imgages/xinyi.jpg" alt="Photo"></div>
+          <div class="img"><img class="img_responsive" src="img/xinyi.jpg" alt="Photo"></div>
           <div class="text">
             <h2>Anyi Rao</h2>
             <p>Student, ESE, NJU</p>
             <table>
               <tbody><tr><td>Address:</td><td>Nanjing</td></tr>
-              <tr><td></td><td>02139</td></tr>
               <tr><td>Email:</td><td>[at] (dot) edu</td></tr>
             </tbody></table>
           </div>
     </div>
     
-    <section class="page-header">
-        <p> I am a third year student from <a href="http://ese.nju.edu.cn/">Nanjing University School of Electronic Science and Engineering</a>. </p>
-        <p> I am a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, from <a href="http://www.moe.gov.cn/">Ministry of Education of China</a>.</p>
-    </section>
 
     <section class="main-content">
         <h2>Research Interests</h2>
@@ -41,7 +36,9 @@ layout: default
    <div class="content anchor" id="bio">     
       <div class="text">
             <h3>Short Bio</h3>
-            <p> Ph.D. student Baidu.</p>
+        <p> I am a third year student from <a href="http://ese.nju.edu.cn/">Nanjing University School of Electronic Science and Engineering</a>. </p>
+        <p> I am a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, from <a href="http://www.moe.gov.cn/">Ministry of Education of China</a>.</p>
+ 
           <span class="tag"><a href="papers/national_model.pdf">Paper</a></span>
        </div>
    </div>
