--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@ layout: default
       <div class="text">
           <h3>Research Interests</h3>
           <p>Computer Vision, Machine Learning</p> 
+          <p>Machine learning is the subfield of computer science that "gives computers the ability to learn without being explicitly 
+              programmed" (Arthur Samuel, 1959). Evolved from the study of pattern recognition and computational learning theory in 
+              artificial intelligence, machine learning explores the study and construction of algorithms that can learn from and make
+              predictions on data – such algorithms overcome following strictly static program instructions by making data driven predictions
+              or decisions,:2 through building a model from sample inputs. Machine learning is employed in a range of computing tasks where 
+              designing and programming explicit algorithms is infeasible; example applications include spam filtering, detection of network 
+              intruders or malicious insiders working towards a data breach, optical character recognition (OCR), search engines and
+              computer vision.</p> 
       </div>
    </div>
     
