--- a/index.html
+++ b/index.html
@@ -3,6 +3,30 @@ layout: default
 ---
 
 <body>
+    <table style="width: 100%;" border="0">
+
+      <tbody>
+        <tr>
+          <td style="width: 245px;">
+            <h1><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="183" hspace="29" vspace="38" width="187"></h1>
+          </td>
+          
+          <td style="width: 946px;">
+            <h1>Jianxin Wu ( <span style="font-weight: normal;"></span> ) </h1>
+            Professor (<a href="Chinese.html"><span style="text-decoration: underline;"></span></a>) <br>
+            <a href="http://cs.nju.edu.cn">Department of Computer Science and Technology</a><br>
+            <a href="http://keysoftlab.nju.edu.cn/">National Key Laboratory for Novel Software Technology</a> <a href="http://www.nju.edu.cn/">Nanjing University</a><br>
+            China <br>
+            <br>
+            I am part of the <a href="http://lamda.nju.edu.cn">LAMDA</a> group. <br>
+            <br>
+            Email: For research related matters (paper, code, review, etc.): <span style="font-weight: bold;">wujx2001 {AT} gmail.com</span> <br> 
+            Email: For teaching related matters (teaching, admission, hiring, etc.): <span style="font-weight: bold;">wujx2001{AT}nju.edu.cn</span> 
+          </td>
+        </tr>
+      </tbody>
+    
+</table>
     <div class="content heading anchor" id="home">
           <div class="img"><img class="img_responsive" src="img/xinyi.jpg" alt="Photo"></div>
           <div class="text">
