--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@ layout: default
 
       <tbody>
         <tr>
-          <td style="width: 245px;">
+          <td style="width: 445px;">
             <h1><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="183" hspace="29" vspace="38" width="187"></h1>
           </td>
           
-          <td style="width: 946px;">
-            <h1>Jianxin Wu ( <span style="font-weight: normal;"></span> ) </h1>
+          <td style="width: 346px;">
+            <h1>Anyi Rao ( <span style="font-weight: normal;"></span> ) </h1>
             Professor (<a href="Chinese.html"><span style="text-decoration: underline;"></span></a>) <br>
             <a href="http://cs.nju.edu.cn">Department of Computer Science and Technology</a><br>
             <a href="http://keysoftlab.nju.edu.cn/">National Key Laboratory for Novel Software Technology</a> <a href="http://www.nju.edu.cn/">Nanjing University</a><br>
@@ -23,7 +23,7 @@ layout: default
             Email: For research related matters (paper, code, review, etc.): <span style="font-weight: bold;">wujx2001 {AT} gmail.com</span> <br> 
             Email: For teaching related matters (teaching, admission, hiring, etc.): <span style="font-weight: bold;">wujx2001{AT}nju.edu.cn</span> 
           </td>
-        </tr>
+       </tr>
       </tbody>
     
 </table>
