--- a/index.html
+++ b/index.html
@@ -13,16 +13,11 @@ layout: default
           
           <td style="width: 346px;">
             <h1>Anyi Rao ( <span style="font-weight: normal;"></span> ) </h1>
-            Professor (<a href="Chinese.html"><span style="text-decoration: underline;"></span></a>) <br>
-            <a href="http://cs.nju.edu.cn">Department of Computer Science and Technology</a><br>
-            <a href="http://keysoftlab.nju.edu.cn/">National Key Laboratory for Novel Software Technology</a> <a href="http://www.nju.edu.cn/">Nanjing University</a><br>
+            Student, ESE, NJU <br>
+            <a href="http://ese.nju.edu.cn">Department of EE</a><br>
+            <a href="http://www.nju.edu.cn/">Nanjing University</a><br>
             China <br>
-            <br>
-            I am part of the <a href="http://lamda.nju.edu.cn">LAMDA</a> group. <br>
-            <br>
-            Email: For research related matters (paper, code, review, etc.): <span style="font-weight: bold;">wujx2001 {AT} gmail.com</span> <br> 
-            Email: For teaching related matters (teaching, admission, hiring, etc.): <span style="font-weight: bold;">wujx2001{AT}nju.edu.cn</span> 
-          </td>
+        </td>
        </tr>
       </tbody>
     
