--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <body>
-    <table style="width: 100%;" border="0">
+    <table style="width: 100%;" border="0 " cellpadding="0" cellspacing="0">
 
       <tbody>
         <tr>
@@ -12,7 +12,7 @@ layout: default
           </td>
           
           <td style="width: 346px;">
-            <h1>Anyi Rao ( <span style="font-weight: normal;"></span> ) </h1>
+            <h1>Anyi Rao  </h1>
             Student, ESE, NJU <br>
             <a href="http://ese.nju.edu.cn">Department of EE</a><br>
             <a href="http://www.nju.edu.cn/">Nanjing University</a><br>
