--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <body>
-    <table style="width: 100%;" border="0 " cellpadding="0" cellspacing="0">
+    <table  border="0 " cellpadding="0" cellspacing="0" >
 
       <tbody>
         <tr>
@@ -11,7 +11,7 @@ layout: default
             <h1><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="183" hspace="29" vspace="38" width="187"></h1>
           </td>
           
-          <td style="width: 346px;">
+          <td style="width: 446px;">
             <h1>Anyi Rao  </h1>
             Student, ESE, NJU <br>
             <a href="http://ese.nju.edu.cn">Department of EE</a><br>
