--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <body>
-     <table  border="0 " cellpadding="0" cellspacing="0" >
+     <table  border="0" cellpadding="0" cellspacing="0" >
 
       <tbody>
         <tr>
@@ -15,7 +15,7 @@ layout: default
             <h1>Anyi Rao  </h1>
             Student <br>
             <a href="http://ese.nju.edu.cn">Department of EE</a><br>
-            <a href="http://www.nju.edu.cn/">Nanjing University</a><br>
+            <a href="http://www.nju.edu.cn/en">Nanjing University</a><br>
             China <br>
         </td>
        </tr>
@@ -42,9 +42,8 @@ layout: default
       <div class="text">
           <h3>Short Bio</h3>
            <p> I am a third year student from <a href="http://ese.nju.edu.cn/">Nanjing University School of Electronic Science and Engineering</a>. 
-               I am a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, from <a href="http://www.moe.gov.cn/">Ministry of Education of China</a>.</p>
-           <p> I got a second prize in national modeling contest.
-          <span class="tag"><a href="papers/national_model.pdf">Paper</a></span></p>
+               I am a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, from <a href="http://www.moe.gov.cn/">Ministry of Education of China</a>.
+           <p> I got a second prize in national modeling contest. <span class="tag"><a href="papers/national_model.pdf">Paper</a></span></p>
       </div>
    </div>
     
