--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@ layout: default
 
 <body>
      <table  border="0" cellpadding="0" cellspacing="0" >
+       <h1><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="203" hspace="29" vspace="38" width="257"></h1>
+     </table>     
+     <table  border="0" cellpadding="0" cellspacing="0" >
         <tr>
           <td >
             <h1><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="203" hspace="29" vspace="38" width="257"></h1>
