--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@ layout: default
 
 <body>
      <table  border="0" cellpadding="0" cellspacing="0" >
-            <h1><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="203" hspace="29" vspace="38" width="257"></h1>
-          <td>
-          <h1>Anyi Rao </h1>
-          </td>
+        <h1><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="203" hspace="29" vspace="38" width="257"></h1>
+       
+          <h1>Anyi Rao  </h1>
+            Student <br>
+            <a href="http://ese.nju.edu.cn">Department of EE</a><br>
+            <a href="http://www.nju.edu.cn/en">Nanjing University</a><br>
+            China <br>
      </table>     
      
      <table  border="0" cellpadding="0" cellspacing="0" >
