--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@ layout: default
         <h1><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="253" hspace="29" vspace="38" width="357"></h1>       
           <h2>Anyi Rao </h2>
             Undergrad Student <br>
-            <a href="http://ese.nju.edu.cn">EE</a>,<a href="http://www.nju.edu.cn/en">Nanjing University</a><br>
-            China 
+            <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a>, <a href="http://www.nju.edu.cn/en">Nanjing University</a><br>
+            China <br>
+            Email: raoanyi [at] 163 (dot) com
      </table>     
      
  
