--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@ layout: default
 
 <body>
      <table  border="0" cellpadding="0" cellspacing="0" >
-        <h1><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="253" hspace="29" vspace="38" width="357"></h1>       
+        <h1><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="273" hspace="29" vspace="338" width="377"></h1>       
           <h2>Anyi Rao </h2>
-            Undergrad Student <br>
-            <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a>, <a href="http://www.nju.edu.cn/en">Nanjing University</a><br>
+            Undergraduate Student <br>
+            <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a><br>
+            <a href="http://www.nju.edu.cn/en">Nanjing University</a><br>
             China <br>
             Email: raoanyi [at] 163 (dot) com
      </table>     
