--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@ layout: default
 
 <body>
      <table  border="0" cellpadding="0" cellspacing="0" >
-        <h1><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="243" hspace="29" vspace="368" width="357"></h1>       
+        <h1><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="243" hspace="29" vspace="368" width="307"></h1>       
           <h2>Anyi Rao </h2>
             Undergraduate Student <br>
-            <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a><br>
+            <a href="http://ese.nju.edu.cn">School of Electronic </a><br>
             <a href="http://www.nju.edu.cn/en">Nanjing University</a><br>
-            China <br>
+            China Science and Engineering<br>
             Email: raoanyi [at] 163 (dot) com
      </table>     
      
