--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ layout: default
 
 <body>
      <table  border="0" cellpadding="0" cellspacing="0" >
-        <h1><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="286" hspace="33" vspace="28" width="367"></h1>       
+        <h1><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="290" hspace="33" vspace="28" width="397"></h1>       
         <h2>Anyi Rao </h2>
             Undergraduate Student <br>
             <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a><br>
             <a href="http://www.nju.edu.cn/en">Nanjing University</a><br>
             China<br>
-            Email: raoanyi [at] 163 (dot) com  
+            Email: raoanyi [at] foxmail (dot) com  
      </table>     
      
  
@@ -18,7 +18,7 @@ layout: default
    <div class="content anchor" id="research">     
       <div class="text">
            
-          <h3>Research Interests</h3>
+          <h3>Research</h3>
           <p>Computer Vision, Machine Learning
           <p>Machine learning is the subfield of computer science that "gives computers the ability to learn without being explicitly 
               programmed" (Arthur Samuel, 1959).<p> Evolved from the study of pattern recognition and computational learning theory in 
