--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <body>
+     <div class="content">
      <table  border="0" cellpadding="0" cellspacing="0" >
         <h2><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="290" hspace="31" vspace="28" width="387"></h2>       
         <h2>Anyi Rao </h2>
@@ -12,7 +13,7 @@ layout: default
             China<br>
             Email: raoanyi [at] foxmail (dot) com  
      </table>     
-     
+     </div>
  
     
    <div class="content anchor" id="research">     
