--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<body>
+<body margin="0">
      <div class="content">
      <table  border="0" cellpadding="0" cellspacing="0" >
         <h2><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="290" hspace="31" vspace="28" width="387"></h2>       
