--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <body margin="0">
      <div class="content">
      <table  border="0" cellpadding="0" cellspacing="0" >
-        <h2><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="290" hspace="31" vspace="28" width="387"></h2>       
+        <h2><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="290" hspace="29" vspace="28" width="387"></h2>       
         <h2>Anyi Rao </h2>
             Undergraduate Student <br>
             <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a><br>
@@ -17,8 +17,7 @@ layout: default
  
     
    <div class="content anchor" id="research">     
-      <div class="text">
-          <h3>Academic</h3>
+      <div class="text">          <h3>Academic</h3>
           <p>My GPA ranks No.1 in each academic year. All major curriculums are above 95 (A+). 
              My overall GPA is 4.79. I am the top student among 183 classmates in my school. 
           </p>
@@ -46,8 +45,10 @@ layout: default
    <div class="content anchor" id="bio">     
       <div class="text">
           <h3>Short Bio</h3>
-           <p> I am a third year student from <a href="http://ese.nju.edu.cn/">School of Electronic Science and Engineering</a>, Nanjing University . 
-               I am a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, from <a href="http://www.moe.gov.cn/">Ministry of Education of China</a>.
+           <p> I am a third year student 4from School of Electronic Science and Engineering, Nanjing University. 
+               I am a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, 
+		   from <a href="http://www.moe.gov.cn/">Ministry of Education of China</a>. My research interests lie on the intersection of computer vision,
+		   machine learning and artificial intelligence. 
            <p> I got a meritorious prize in national modeling contest.  <span class="tag"><a href="papers/national_model.pdf"> Paper</a></span></p>
       </div>
    </div>
@@ -59,7 +60,12 @@ layout: default
                 Nanjing University Excellent Student Leader Award <br>
                 Nanjing University Excellent Student Award </p>
    </div>    
-    
+   
+   <div class="content" >      
+          <h3>Miscellaneous</h3>
+           <p>  Internship in CHANGJIANG ELEC. TECH. (JCET) <span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html">  Report</a></span><br>
+                Member of Nanjing University Chrous  </p>
+   </div>	
 <a href='https://clustrmaps.com/site/17y2j' title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=cbe090&w=300&d=wqSPPLOdbjS8swCrhsthoXUrpBZpYFIUoU6NVvkcCEE&t=tt&co=2d78ad&ct=ffffff'/></a>
 
 </body>
