--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@ layout: default
       <div class="text">          <h3>Academic</h3>
           <p>My GPA ranks No.1 in each academic year. All major curriculums are above 95 (A+). 
              My overall GPA is 4.79. I am the top student among 183 classmates in my school. 
-          </p>
+          
+	      <p>I finished my major curriculums in 2 years and I learned a lot from online course. <br>
+		      David Jerison. 18.01: Single Variable Calculus. MIT.<br>
+                      Denis Auroux. 18.02: Multivariable Calculus. MIT.<br>
+                      Dennis Freeman. 6.01: Introduction to Electrical Engineering and Computer Science I. MIT. <br>
+                      Gilbert Strang. 18.06: Linear Algebra. MIT.<br>
+		      Andrew Ng. cs229: Machine Learning. Stanford.<br>
+                      Fei-Fei Li & Andrej Karpathy. cs231n: Convolutional Neural Networks for Visual Recognition. Stanford.
+             </p>
           
           <h3>Research</h3>
             <p>Oct.2014-Dec,2015  Research Institute of Superconductor Electronics (RISE), Nanjing University <br>
