--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@ layout: default
              My overall GPA is 4.79. I am the top student among 183 classmates in my school. 
           
 	      <p>I finished my major curriculums in 2 years and I learned a lot from online course. <br>
-		      David Jerison. 18.01: Single Variable Calculus. MIT.<br>
-                      Denis Auroux. 18.02: Multivariable Calculus. MIT.<br>
-                      Dennis Freeman. 6.01: Introduction to Electrical Engineering and Computer Science I. MIT. <br>
-                      Gilbert Strang. 18.06: Linear Algebra. MIT.<br>
-		      Andrew Ng. cs229: Machine Learning. Stanford.<br>
-                      Fei-Fei Li & Andrej Karpathy. cs231n: Convolutional Neural Networks for Visual Recognition. Stanford.
+		      -David Jerison. 18.01: Single Variable Calculus. MIT.<br>
+                      -Denis Auroux. 18.02: Multivariable Calculus. MIT.<br>
+                      -Dennis Freeman. 6.01: Introduction to Electrical Engineering and Computer Science I. MIT. <br>
+                      -Gilbert Strang. 18.06: Linear Algebra. MIT.<br>
+		      -Andrew Ng. cs229: Machine Learning. Stanford.<br>
+                      -Fei-Fei Li & Andrej Karpathy. cs231n: Convolutional Neural Networks for Visual Recognition. Stanford.
              </p>
           
           <h3>Research</h3>
