--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <body margin="0">
      <div class="content">
      <table  border="0" cellpadding="0" cellspacing="0" >
-        <h2><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="290" hspace="20" padding-left="20" padding-right="60" vspace="28" width="387"></h2>       
+        <h2><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="290" hspace="20" vspace="28" width="387"></h2>       
         <h2>Anyi Rao </h2>
             Undergraduate Student <br>
             <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a><br>
