--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 layout: default
 ---
 
-<body margin="0">
+<body>
      <div class="content">
      <table  border="0" cellpadding="0" cellspacing="0" >
-        <h2><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="290" hspace="20" vspace="28" width="387"
-		  @include media-query($on-palm){hspace="0";}></h2>  
-	    
+        <h2><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="290" hspace="15" vspace="25" width="387"></h2> 	    
         <h2>Anyi Rao </h2>
             Undergraduate Student <br>
             <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a><br>
