--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <body>
-     <div class="content">
+     <div class="brief">
      <table  border="0" cellpadding="0" cellspacing="0" >
         <h2><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="290" hspace="15" vspace="25" width="387"></h2> 	    
         <h2>Anyi Rao </h2>
