--- a/index.html
+++ b/index.html
@@ -3,6 +3,54 @@ layout: default
 ---
 
 <body>
+     <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="http://ZhijianJiang.github.io">Zhijian's Site</a>
+    </div>
+
+    <div class="collapse navbar-collapse" id="main-navbar">
+      <ul class="nav navbar-nav navbar-right">        
+          <li>
+<a href="http://jiangzhijian.com">Home</a>
+         </li>
+          <li class="navlinks-container" style="min-width: 118px;">
+            <a class="navlinks-parent" href="javascript:void(0)">Resources</a>
+            <div class="navlinks-children">
+
+<a href="http://www.markdowntutorial.com/">Learn markdown</a>
+
+<a href="https://pages.github.com/">GitHub Pages</a>
+
+<a href="/ZhijianJiang/www.sky-data.cn">SKY DATA</a>
+		  </div>
+          </li>      
+          <li>
+<a href="/ZhijianJiang/aboutme">About Me</a>
+          </li>
+           <li>
+<a href="/ZhijianJiang/contactme">Contact Me</a>
+
+          </li>      
+      </ul>
+    </div>	
+	<div class="avatar-container">
+	  <div class="avatar-img-border">
+	    <a href="http://ZhijianJiang.github.io ">
+	      <img class="avatar-img" src="/ZhijianJiang/img/avatar-icon.png">
+		</a>
+	  </div>
+	</div>
+	
+
+  </div>
+</nav>	
      <div class="brief">
      <table  border="0" cellpadding="0" cellspacing="0" >
         <h2><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="290" hspace="15" vspace="25" width="387"></h2> 	    
