--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@ layout: default
 <body>	
      <div class="brief">
      <table  border="0" cellpadding="0" cellspacing="0" >
-        <h2><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="290" hspace="15" vspace="25" width="387"></h2> 	    
-        <h2>Anyi Rao </h2>
+        <div><h2><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="290" hspace="15" vspace="25" width="387"></h2> 	    
+       </div>
+		<div> <h2>Anyi Rao </h2>
             Undergraduate Student <br>
             <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a><br>
             <a href="http://www.nju.edu.cn/en">Nanjing University</a><br>
             China<br>
             Email: raoanyi [at] foxmail (dot) com  
+	</div>       
      </table>     
      </div>
  
