--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <body>	
      <div class="brief">
      <table  border="0" cellpadding="0" cellspacing="0" >
-        <div><h2><img alt="My picture" src="img/xinyi.jpg" align="left" border="0" height="290" hspace="15" vspace="25" width="387"></h2> 	    
+        <div><h2><img alt="My picture" src="img/Anyi Rao.jpg" align="left" border="0" height="280" hspace="15" vspace="25" width="387"></h2> 	    
        </div>
 		<div> <h2>Anyi Rao </h2>
             Undergraduate Student <br>
