--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <body>	
-     <div class="brief">
+   
         <table style="width: 100%;" border="0">
 	<tbody>
 	<tr>
@@ -22,22 +22,18 @@ layout: default
         </tr>
         </tbody>
         </table>
-   <\div>	
+ 	
 	   
    <div class="content heading anchor" id="home">
-          <div class="img"><img class="img_responsive" src="img/Anyi Rao.jpg" alt="Photo"></div>
+          <div class="img"><img class="img_responsive" src="img/Anyi Rao.jpg" align="left" alt="Photo"></div>
           <div class="text">
             <h2>Anyi Rao</h2>
             <p>Undergraduate Student</p>
             <table>
-              <tbody><tr><td>Office:</td><td>32-D466, 32 Vassar Street</td></tr>
-              <tr><td></td><td>Cambridge, MA 02139</td></tr>
-              <tr><td>Email:</td><td>jiajunwu [at] mit (dot) edu</td></tr>
+              <tbody><tr><td>Address:</td><td><a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a></td></tr>
+              <tr><td></td><td><a href="http://www.nju.edu.cn/en">Nanjing University</a></td></tr>
+              <tr><td>Email:</td><td>raoanyi [at] foxmail (dot) com</td></tr>
             </tbody></table>
-            <p>
-            <span class="tag"><a href="https://scholar.google.com/citations?user=2efgcS0AAAAJ&amp;hl=en&amp;oi=ao">Google Scholar</a></span>
-            <span class="tag"><a href="http://dblp.dagstuhl.de/pers/hd/w/Wu_0001:Jiajun">DBLP</a></span>
-            </p>
           </div>
         </div>	   
 	   
