--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
  	
 	   
    <div class="content heading anchor" id="home">
-          <div class="img"><img class="img_responsive" src="img/Anyi Rao.jpg" align="left" alt="Photo"></div>
+          <div class="img"><img class="img_responsive" src="img/Anyi Rao.jpg" alt="Photo" align="left" height="265" hspace="15" vspace="15" width="390"></div>
           <div class="text">
             <h2>Anyi Rao</h2>
             <p>Undergraduate Student</p>
