--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@ layout: default
  	
 	   
    <div class="content heading anchor" id="home">
-          <div class="img"><img class="img_responsive" src="img/Anyi Rao.jpg" alt="Photo" align="left" height="265" hspace="15" vspace="15" width="390"></div>
+          <div class="img"><img class="img_responsive" src="img/Anyi Rao.jpg" alt="Photo" align="left" height="255" hspace="15" vspace="15" width="380"></div>
           <div class="text">
             <h2>Anyi Rao</h2>
-            <p>Undergraduate Student</p>
-            <table>
-              <tbody><tr><td>Address:</td><td><a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a></td></tr>
-              <tr><td></td><td><a href="http://www.nju.edu.cn/en">Nanjing University</a></td></tr>
-              <tr><td>Email:</td><td>raoanyi [at] foxmail (dot) com</td></tr>
-            </tbody></table>
+            <p>Undergraduate Student
+            Undergraduate Student <br>
+            <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a><br>
+            <a href="http://www.nju.edu.cn/en">Nanjing University</a><br>
+            China<br>
+            Email: raoanyi [at] foxmail (dot) com
+            </p>
           </div>
         </div>	   
 	   
