--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <body>	
 	
    <div class="content heading anchor" id="home">
-          <div class="img"><img class="img_responsive" src="img/Anyi Rao.jpg" alt="Photo" align="left" height="255" hspace="15" vspace="15" width="380"></div>
+          <div class="img"><img class="img_responsive" src="img/Anyi Rao.jpg" alt="Photo" align="left"></div>
           <div class="text">
             <h2>Anyi Rao</h2>
             <p>Undergraduate Student
