--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
             <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a><br>
             <a href="http://www.nju.edu.cn/en">Nanjing University</a><br>
             China<br>
-            Email: raoanyi [at] foxmail (dot) com
+            Email: raoanyi [at] foxmail (dot) com<br>
             </p>
           </div>
         </div>	   
