--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
 <body>	
 	
    <div class="content heading anchor" id="home">
-          <div class="img"><img class="img_responsive" src="img/Anyi Rao.jpg" alt="Photo" align="left" height="250" width="350" ></div>
-          <div class="text">
+          <div class="img"><img class="header img" src="img/Anyi Rao.jpg" alt="Photo" align="left" height="250" width="350" ></div>
+          <div class="header text">
             <h2>Anyi Rao</h2>
             <p>Undergraduate Student
             Undergraduate Student <br>
