--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
             </p>
           </div>
         </div>	   
-   
+   <table><\table>
 	   
     
    <div class="content anchor" id="research">     
