--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
                       <li>Dennis Freeman. 6.01: Introduction to Electrical Engineering and Computer Science I. MIT. <br>
                       <li>Gilbert Strang. 18.06: Linear Algebra. MIT.<br>
 		      <li>Andrew Ng. cs229: Machine Learning. Stanford.<br>
-                      <li>Fei-Fei Li & Andrej Karpathy. cs231n: Convolutional Neural Networks for Visual Recognition. Stanford.<\li>
+                      <li>Fei-Fei Li & Andrej Karpathy. cs231n: Convolutional Neural Networks for Visual Recognition. Stanford.
              </p>
           
           <h3>Research</h3>
