--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@ layout: default
           <div class="img"><img class="header-img" src="img/Anyi.jpg" alt="Photo" align="left" height="250" width="350" ></div>
           <div class="header-text">
             <h2>Anyi Rao</h2>
-            <p>Undergraduate Student
-            Undergraduate Student <br>
+            <p>Undergraduate Student <br>
             <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a><br>
             <a href="http://www.nju.edu.cn/en">Nanjing University</a><br>
             China<br>
