--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@ layout: default
             <h2>Anyi Rao</h2>
             <p>Undergraduate Student <br>
             <a href="http://ese.nju.edu.cn">School of Electronic Science and Engineering</a><br>
-            <a href="http://www.nju.edu.cn/en">Nanjing University</a><br>
-            China<br>
+            <a href="http://www.nju.edu.cn/en">Nanjing University</a>, China<br>
             Email: anyirao [at] foxmail (dot) com<br>
             </p>
           </div>
