--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@ layout: default
              </p>
           
           <h3>Research</h3>
-            <p>Oct.2014-Dec,2015  Research Institute of Superconductor Electronics (RISE), Nanjing University <br>
-            Single-Photon Detector, main contributor<br>
+	      
+            <p><span style="font-weight: bold;">Single-Photon Detector, main contributor</span> <br>
+		Oct.2014-Dec,2015  Research Institute of Superconductor Electronics (RISE), Nanjing University <br>
+
 	       Designed a 64 road low-noise pre-amplifier using a symmetric structure 
             Drew 8 layers PCB; Altium
             Reduced noise by 100 times
