--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
           <p>My GPA ranks No.1 in each academic year. All major curriculums are above 95 (A+). 
              My overall GPA is 4.79. I am the top student among 183 classmates in my school. 
           
-	      <p>I finished my major curriculums in 2 years and I learned a lot from online course. <br>
+	      <p>I finished my major curriculums in 2 years and I learned a lot from online courses. <br>
 		      <li>David Jerison. 18.01: Single Variable Calculus. MIT.<br>
                      <li>Denis Auroux. 18.02: Multivariable Calculus. MIT.<br>
                       <li>Dennis Freeman. 6.01: Introduction to Electrical Engineering and Computer Science I. MIT. <br>
@@ -79,9 +79,11 @@ layout: default
           <h3>Miscellaneous</h3>
            <p>  Internship in CHANGJIANG ELEC. TECH. (JCET) <span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html">  Report</a></span><br>
                 Member of Nanjing University Chrous  </p>
-   </div>	
+   </div>
+	
+	<div text-align:center>
    <a href='https://clustrmaps.com/site/17y2j' title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=cbe090&w=300&d=wqSPPLOdbjS8swCrhsthoXUrpBZpYFIUoU6NVvkcCEE&t=tt&co=2d78ad&ct=ffffff'/></a>
-
+</div>
 </body>
 
 
