--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ layout: default
                 Member of Nanjing University Chrous  </p>
    </div>
 	
-	<div style='text-align:center'>
+	<div style="text-align:center;">
    <a href='https://clustrmaps.com/site/17y2j' title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=cbe090&w=300&d=wqSPPLOdbjS8swCrhsthoXUrpBZpYFIUoU6NVvkcCEE&t=tt&co=2d78ad&ct=ffffff'/></a>
 </div>
 </body>
