--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@ layout: default
           
 	      <p>I finished my major curriculums in 2 years and I learned a lot from online courses. <br>
 		      <li>David Jerison. 18.01: Single Variable Calculus. MIT.<br>
-                     <li>Denis Auroux. 18.02: Multivariable Calculus. MIT.<br>
+                      <li>Denis Auroux. 18.02: Multivariable Calculus. MIT.<br>
                       <li>Dennis Freeman. 6.01: Introduction to Electrical Engineering and Computer Science I. MIT. <br>
                       <li>Gilbert Strang. 18.06: Linear Algebra. MIT.<br>
 		      <li>Andrew Ng. cs229: Machine Learning. Stanford.<br>
                       <li>Fei-Fei Li & Andrej Karpathy. cs231n: Convolutional Neural Networks for Visual Recognition. Stanford.
+		      <li>Wei Guo & Jiangying Liu:C++ Programing Design. Peking University.
              </p>
     
    <div class="content anchor" id="research">  	      
