--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ layout: default
    <div class="content anchor" id="bio">     
       <div class="text">
           <h3>Short Bio</h3>
-           <p> I am a third year student 4from School of Electronic Science and Engineering, Nanjing University. 
+           <p> I am a third year student from School of Electronic Science and Engineering, Nanjing University. 
                I am a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, 
 		   from <a href="http://www.moe.gov.cn/">Ministry of Education of China</a>. My research interests lie on the intersection of computer vision,
 		   machine learning and artificial intelligence. 
@@ -79,12 +79,12 @@ layout: default
    <div class="content" >      
           <h3>Miscellaneous</h3>
            <p>  Internship in CHANGJIANG ELEC. TECH. (JCET) <span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html">  Report</a></span><br>
-                Member of Nanjing University Chrous  </p>
+                Member of <a href="http://www.nju.edu.cn/EN/84/08/c7125a164872/page.htm"> Nanjing University Student Choir</a> </p>      
    </div>
 	
-	<div style="text-align:center;">
+   <div style="text-align:center;">
    <a href='https://clustrmaps.com/site/17y2j' title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=cbe090&w=300&d=wqSPPLOdbjS8swCrhsthoXUrpBZpYFIUoU6NVvkcCEE&t=tt&co=2d78ad&ct=ffffff'/></a>
-</div>
+   </div>
 </body>
 
 
