--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <body>	
 	
    <div class="content heading anchor" id="home">
-          <div class="img"><img class="header-img" src="img/Anyi.jpg" alt="Photo" align="left" height="250" width="350" ></div>
+          <div class="img"><img class="header-img" src="img/Anyi.jpg" alt="Photo" align="left" height="250" ></div>
           <div class="header-text">
             <h2>Anyi Rao</h2>
             <p>Undergraduate Student <br>
