--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@ layout: default
    <div class="content anchor" id="bio">     
       <div class="text">
           <h3>Short Bio</h3>
-           <p> I am a third year student from School of Electronic Science and Engineering, Nanjing University. 
+           <p> I am a third year undergrad student from School of Electronic Science and Engineering, Nanjing University. 
                I am a member of <a href="http://www.moe.gov.cn/publicfiles/business/htmlfiles/moe/s3860/201102/115066.html">Excellent Engineer Training Program</a>, 
 		   from <a href="http://www.moe.gov.cn/">Ministry of Education of China</a>. My research interests lie on the intersection of computer vision,
 		   machine learning and artificial intelligence. 
-           <p> I got a meritorious prize in national modeling contest.  <span class="tag"><a href="papers/national_model.pdf"> Paper</a></span></p>
+           <p> I got a meritorious prize in national modeling contest.  <span class="tag"><a href="papers/national_model.pdf"> [Paper]</a></span></p>
       </div>
    </div>
 	
@@ -73,13 +73,14 @@ layout: default
           <h3>Awards</h3>
            <p>  National Scholarship, by Minstry of Education of China <br>
                 Nanjing University Excellent Student Leader Award <br>
-                Nanjing University Excellent Student Award </p>
+                Nanjing University Excellent Student Award 
+	        Top Volunteer Excellent Award</p>
    </div>    
    
    <div class="content" >      
           <h3>Miscellaneous</h3>
-           <p>  Internship in CHANGJIANG ELEC. TECH. (JCET) <span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html">  Report</a></span><br>
-                Member of <a href="http://www.nju.edu.cn/EN/84/08/c7125a164872/page.htm"> Nanjing University Student Choir</a> </p>      
+           <p>Internship in CHANGJIANG ELEC. TECH. (JCET) <6span class="tag"><a href="http://ese.nju.edu.cn/content-8-3133-1.html">  [Report]</a></span><br>
+              Member of Nanjing University <a href="http://www.nju.edu.cn/EN/84/08/c7125a164872/page.htm"> Student Choir</a> </p>      
    </div>
 	
    <div style="text-align:center;">
